@@ -243,8 +243,15 @@ def test_cookies():
     }
     assert set(dump_cookie('foo', 'bar baz blub', 360, httponly=True,
                            sync_expires=False).split('; ')) == \
-           set(['HttpOnly', 'Max-Age=360', 'Path=/', 'foo=bar baz blub'])
+           set(['HttpOnly', 'Max-Age=360', 'Path=/', 'foo="bar baz blub"'])
     assert parse_cookie('fo234{=bar blub=Blah') == {'blub': 'Blah'}
+
+
+def test_cookie_quoting():
+    """Cookie value quoting."""
+    val = dump_cookie("foo", "?foo")
+    assert val == 'foo="?foo"; Path=/'
+    assert parse_cookie(val) == {'foo': '?foo'}
 
 
 def test_responder():
