@@ -7,6 +7,7 @@ Version 0.6
 
 - removed pending deprecations
 - sys.path is now printed from the testapp.
+- fixed an RFC 2068 incompatibility with cookie value quoting.
 
 Version 0.5.1
 -------------
